graph/gitops/neo4j/neo4j-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j
  labels:
    app: neo4j
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      containers:
      - name: neo4j
        image: neo4j:latest # You can replace this with the version you need
        ports:
        - containerPort: 7474  # Neo4j Browser HTTP
        - containerPort: 7687  # Bolt Protocol
        volumeMounts:
        - name: neo4j-data
          mountPath: /data
        - name: custom-config
          mountPath: /var/lib/neo4j/conf
        securityContext:
          runAsUser: 7474
          fsGroup: 7474
      volumes:
      - name: neo4j-data
        persistentVolumeClaim:
          claimName: neo4j-pvc # This PVC needs to be created separately
      - name: custom-config
        configMap:
          name: neo4j-config
          items:
          - key: neo4j.conf
            path: neo4j.conf
