graph/gitops/neo4j/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j
spec:
  selector:
    app: neo4j
  ports:
    - protocol: TCP
      port: 7474
      targetPort: 7474
    - protocol: TCP
      port: 7687
      targetPort: 7687
  type: LoadBalancer
