graph/gitops/neo4j/neo4j-route-bolt.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: neo4j-route-bolt
spec:
  to:
    kind: Service
    name: neo4j
  port:
    targetPort: 7687
  tls:
    termination: edge
