graph/gitops/neo4j/neo4j-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: neo4j-route
spec:
  to:
    kind: Service
    name: neo4j
  port:
    targetPort: 7474
  tls:
    termination: edge
